--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17726,3 +17726,22 @@ h6{
   list-style-type: disc;
   line-height: 2.3;
 }
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #ea1e00; 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555; 
+}
